[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.0"
name = "wipac-dev-tools"
keywords = ["WIPAC", "python", "tools", "utilities"]
url = "https://github.com/WIPACrepo/wipac-dev-tools"
author = "WIPAC Developers"
author_email = "developers@icecube.wisc.edu"
description = "Common, basic, and reusable development tools"
readme = "README.md"
license = "MIT"
classifiers = ["Development Status :: 5 - Production/Stable", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12"]
requires-python = ">=3.8, <3.13"

[project.find]
namespaces = false

[project.urls]
Homepage = "https://pypi.org/project/wipac-dev-tools/"
Tracker = "https://github.com/WIPACrepo/wipac-dev-tools/issues"
Source = "https://github.com/WIPACrepo/wipac-dev-tools"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "emoji"

[tool.semantic_release.commit_parser_options]
major_tags = ["[major]"]
minor_tags = ["[minor]", "[feature]"]
patch_tags = ["[patch]", "[fix]", " ", "!", "#", "$", "%", "&", "'", "(", ")", "*", "+", "-", ".", "/", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9", ":", ";", "<", "=", ">", "?", "@", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z", "[", "\\", "]", "^", "_", "`", "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z", "{", "|", "}", "~"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["test", "tests", "doc", "docs", "resource", "resources", "example", "examples"]
